--- a/identity-service/src/main/resources/application.yaml
+++ b/identity-service/src/main/resources/application.yaml
@@ -11,6 +11,7 @@ spring:
     url: jdbc:mysql://localhost:3306/identity_service
     username: root
     password: 1234
+    driver-class-name: com.mysql.cj.jdbc.Driver
 
   jpa:
     hibernate:
